# learning_class_reg

./: .gitignore  README.md  pyproject.toml
demos/: classification_demo.py  clustering_demo.py  cv_demo.py  nlp_demo.py  regression_demo.py
src/learning_class_reg/: __init__.py
